[package]
name = "my-project"
version = "0.1.0"
authors = ["radev1924 <radev1924@abv.bg>"]
edition = "2021"
build = "build.rs"
description = "app which Calculates several important things from income"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"

[build-dependencies]
slint-build = "1.6"

[package. metadata. bundle]
name = "Income Calculator"
identifier = "io.github.radev1924.my-project"